fix overflow-x hidden not working on mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -61,6 +61,11 @@ body {
   overflow-x: hidden;
 }
 
+.wrapper {
+  overflow-x: hidden;
+  position: relative;
+}
+
 /****************************/
 /* HEADER */
 /****************************/
